crates/rpstate/tests/fails/lookup_node_not_struct.stderr
error[E0277]: the trait bound `u16: RpStateNode` is not satisfied
  --> tests/fails/lookup_node_not_struct.rs:12:26
   |
12 |     pub proxy_port_node: u16,
   |                          ^^^ the trait `RpStateNode` is not implemented for `u16`
   |
   = help: the following other types implement trait `RpStateNode`:
             NetworkState
             UiState
